# man-sysnopsis-tools

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
src/cmdutil/: lib.rs
src/libsynop/: lib.rs  parser.rs
src/synop/: ast.rs  lib.rs  parser.rs  token.rs  util.rs
src/synopexpand/: main.rs
src/synopfmt/: main.rs
src/synopopt/: main.rs
